<resources>
    <string name="app_name">Inno Weather</string>
    <string name="action_settings">Settings</string>
    <string name="view_text_cloudiness">Cloudiness</string>
    <string name="view_text_temperature">Temperature</string>
    <string name="menu_title_update">Update</string>
    <string name="menu_add_new_city">Add new city</string>
    <string name="dialog_title_pick_city">Add new city</string>
    <string name="dialog_add_city">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="cities_tag">cities</string>
    <string name="weather_tag">weather</string>
    <string name="view_text_humidity">Humidity</string>
    <string name="view_text_pressure">Pressure</string>
    <string name="default_city_name">Weather</string>
    <string name="view_text_today">Today</string>
    <string name="view_text_wind_speed">Wind speed</string>
    <string name="view_text_wind_direction">Wind direction</string>
    <string name="mbar">mbar</string>
    <string name="msec">m/sec</string>
    <string name="msg_dowload_success">Data successfully downloaded</string>
    <string name="msg_network_unavailable">Network is unavailable. Cached data presented.</string>
    <string name="ex_not_implemented">Not implemented yet</string>
    <string name="msg_city_not_found">City not found</string>
</resources>
