<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_today" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:background="@color/secondary_text" />

        <TextView
            style="@style/AppTheme.TextViewSubTitle"
            android:text="@string/view_text_temperature" />

        <TextView
            android:id="@+id/tv_temp"
            style="@style/AppTheme.TextViewMainText"
            tools:text="20" />

        <TextView
            style="@style/AppTheme.TextViewSubTitle"
            android:text="@string/view_text_cloudiness" />

        <TextView
            android:id="@+id/tv_cloudiness"
            style="@style/AppTheme.TextViewMainText"
            tools:text="Sunny" />

        <TextView
            style="@style/AppTheme.TextViewSubTitle"
            android:text="@string/view_text_humidity" />

        <TextView
            android:id="@+id/tv_humidity"
            style="@style/AppTheme.TextViewMainText"
            tools:text="70%" />

        <TextView
            style="@style/AppTheme.TextViewSubTitle"
            android:text="@string/view_text_pressure" />

        <TextView
            android:id="@+id/tv_pressure"
            style="@style/AppTheme.TextViewMainText"
            tools:text="1013" />
    </LinearLayout>
</android.support.v7.widget.CardView>

