<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_today"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewThermometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_text_temperature"
                        android:src="@drawable/ic_thermometer" />

                    <TextView
                        android:id="@+id/textView"
                        style="@style/AppTheme.TextViewSubTitle"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewThermometer"
                        android:layout_toRightOf="@+id/imageViewThermometer"
                        android:text="@string/view_text_temperature" />

                    <TextView
                        android:id="@+id/tv_temp"
                        style="@style/AppTheme.TextViewMainText"
                        android:layout_below="@+id/textView"
                        android:layout_toEndOf="@+id/imageViewThermometer"
                        android:layout_toRightOf="@+id/imageViewThermometer"
                        tools:text="20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_text_wind_speed"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/AppTheme.TextViewSubTitle"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewWindSpeed"
                        android:layout_toRightOf="@+id/imageViewWindSpeed"
                        android:text="@string/view_text_wind_speed" />

                    <TextView
                        android:id="@+id/tv_wind_speed"
                        style="@style/AppTheme.TextViewMainText"
                        android:layout_below="@+id/textView2"
                        android:layout_toEndOf="@+id/imageViewWindSpeed"
                        android:layout_toRightOf="@+id/imageViewWindSpeed"
                        tools:text="20" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewWindDirection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_text_wind_direction"
                        android:src="@drawable/ic_wind_direction" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/AppTheme.TextViewSubTitle"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewWindDirection"
                        android:layout_toRightOf="@+id/imageViewWindDirection"
                        android:text="@string/view_text_wind_direction" />

                    <TextView
                        android:id="@+id/tv_wind_direction"
                        style="@style/AppTheme.TextViewMainText"
                        android:layout_below="@+id/textView3"
                        android:layout_toEndOf="@+id/imageViewWindDirection"
                        android:layout_toRightOf="@+id/imageViewWindDirection"
                        tools:text="North" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewCloudiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_text_cloudiness"
                        android:src="@drawable/ic_cloudy" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/AppTheme.TextViewSubTitle"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewCloudiness"
                        android:layout_toRightOf="@+id/imageViewCloudiness"
                        android:text="@string/view_text_cloudiness" />

                    <TextView
                        android:id="@+id/tv_cloudiness"
                        style="@style/AppTheme.TextViewMainText"
                        android:layout_below="@+id/textView4"
                        android:layout_toEndOf="@+id/imageViewCloudiness"
                        android:layout_toRightOf="@+id/imageViewCloudiness"
                        tools:text="Sunny" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_text_humidity"
                        android:src="@drawable/ic_drops" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/AppTheme.TextViewSubTitle"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageViewHumidity"
                        android:layout_toRightOf="@+id/imageViewHumidity"
                        android:text="@string/view_text_humidity" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        style="@style/AppTheme.TextViewMainText"
                        android:layout_below="@+id/textView5"
                        android:layout_toEndOf="@+id/imageViewHumidity"
                        android:layout_toRightOf="@+id/imageViewHumidity"
                        tools:text="70%" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/view_text_pressure"
                        android:src="@drawable/ic_pressure_gauge" />

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/AppTheme.TextViewSubTitle"
                        android:layout_alignLeft="@+id/tv_pressure"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/tv_pressure"
                        android:text="@string/view_text_pressure" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        style="@style/AppTheme.TextViewMainText"
                        android:layout_below="@+id/textView6"
                        android:layout_toEndOf="@+id/imageViewPressure"
                        android:layout_toRightOf="@+id/imageViewPressure"
                        tools:text="1013" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>

